* added saving sequence as PNG
* merged print and image save dialogs. Multiple forms can be saved in a single PNG or SVG
* added Australian Aerobatic Club logo
* fixed bug where, when opening file, logo was overriden by logo associated with rules
* added 2014 CIVA sequences
* fixed bug causing png logo images to use max available width on forms
* improved file naming consistency (Issue #120)
* created Chrome app for improved file saving : TO DO : correct manual etc links
* fixed Firefox bug where some (rolling) turns were tiny in figure chooser
* replaced use of cookies by localStorage and (for App) chrome.storage
* added plus and minus to move XY values and remove the values when unused
* added option for different roll font sizes in settings and changed default to 20px
* added persistence of rolls when changing figure to similar (Issue #116)
* fixed roundTwo function (Issue #38)
* added option to allow non-Aresti rolls. Off by default (Issue #43)
* added saving of OpenAero settings to .seq file
* added Sport Aerobatic Club of South Africa logo
* added Swiss Aerobatic Association logo
* added International Miniature Aerobatic Club logo
* disabled server bouncing for files as currently it causes more trouble than it helps
* added automatic separation of subsequent roll text

1.3.8
* added VINK rules for Standard Unknown
* reduced unnecessary 'unsaved file' alerts when leaving OpenAero
* removed double endline from last figure, and extra circle from first, in Grid view
* changed default number of grid columns to 5 (logical for Power Unknown)
* fixed Safari bug where selected figure disappears
* improved look of Wingover
* added options for adding all figures to queue and clearing queue
* created framework for using multiple interface languages
* removed roll in bottom of loop where illegal; descending P and Q loops
* fixed missing alerts for Unlimited Unknown sequences
* added possibility to change drawing styles