@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-  about.html version 1.2.3
+  about.html version 1.4.0
   This file is part of OpenAero.
 
   OpenAero was originally designed by Ringo Massa and built upon ideas
@@ -20,7 +20,7 @@
   along with OpenAero.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<HTML>
+<html style="overflow-y:scroll;">
   <HEAD>
     <link rel="stylesheet" href="OpenAero.css">
     <TITLE>OpenAero manual</TITLE>
