@@ -20,7 +20,7 @@
   along with OpenAero.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<HTML>
+<html style="overflow-y:scroll;">
   <HEAD>
     <link rel="stylesheet" href="OpenAero.css">
     <TITLE>OpenAero Manual</TITLE>
